--- a/index.jade
+++ b/index.jade
@@ -10,6 +10,7 @@ html(lang='en')
         img(src="img/drunkhulk.gif")
 
       .project
+        h1 skunkworks ideas
         h2 gist.mongodb.land
 
         ul.description
