--- a/index.jade
+++ b/index.jade
@@ -14,13 +14,20 @@ html(lang='en')
         h2 gist.mongodb.land
 
         ul.description
-          LI mongo no like random untested javascripts in jira tickets
-          LI mongo want version control, sharing, syntax highlighting, search, community, testing, for scripts mongo
-          LI mongo know richard kreutzer and many others want this
+          li like
+            a(href="http://bl.ocks.org/") bl.ocks.org
+            | but for scripts
+          li too many random untested javascripts in jira tickets
+          li want version control, sharing, syntax highlighting, search, community
+          li lots and lots of people need and want this, for real.
 
         h3 to help
+
         ul.help
           li pass along scripts and mongo shell helpers you have hidden under a rock
+          li ask the guy working on mongoscope to add a
+            strong run in mongoscope
+            | button
 
   script(src='index.js')
 
