bah more formatting

--- a/index.jade
+++ b/index.jade
@@ -11,12 +11,13 @@ html(lang='en')
 
       .project
         h1 skunkworks ideas
+
         h2 gist.mongodb.land
 
         ul.description
-          li like
+          li like&nbsp;
             a(href="http://bl.ocks.org/") bl.ocks.org
-            | but for scripts
+            |&nbsp;but for scripts
           li too many random untested javascripts in jira tickets
           li want version control, sharing, syntax highlighting, search, community
           li lots and lots of people need and want this, for real.
