--- a/less/index.less
+++ b/less/index.less
@@ -14,15 +14,15 @@ body {
   }
   .project {
     h2 {
-      margin-left: 100px;
+
     }
     .description, .help {
       list-style: none;
       padding: 0;
-      margin: 0 0 0 100px;
+      margin: 0;
     }
     h3 {
-      margin-left: 100px;
+
     }
   }
 }
