moving over more notes

--- a/index.jade
+++ b/index.jade
@@ -10,25 +10,9 @@ html(lang='en')
         img(src="img/drunkhulk.gif")
 
       .project
-        h1 skunkworks ideas
+        include:markdown index.md
 
-        h2 gist.mongodb.land
 
-        ul.description
-          li like&nbsp;
-            a(href="http://bl.ocks.org/") bl.ocks.org
-            |&nbsp;but for scripts
-          li too many random untested javascripts in jira tickets
-          li want version control, sharing, syntax highlighting, search, community
-          li lots and lots of people need and want this, for real.
-
-        h3 to help
-
-        ul.help
-          li pass along scripts and mongo shell helpers you have hidden under a rock
-          li ask the guy working on mongoscope to add a
-            strong run in mongoscope
-            | button
 
   script(src='index.js')
 
